Fixed styling to remove huge whitespace between primary and secondary content areas.

--- a/app/stylesheets/modules.less
+++ b/app/stylesheets/modules.less
@@ -148,10 +148,12 @@ input[type=hidden] { display: none; }
    margin-right: 1em;
 }
 
-
 .primary-content {
-  p, input, textarea { 
-     max-width: 520px;
+  p { 
+     max-width: 100%;
+  }
+  input, textarea { 
+     max-width: 96%;
   }
 }
 
